# kabot

./: .gitignore  README.md  qmd_embed.sh  qmd_update.sh
docs/: PROPOSAL-weixin-channel.md  SUBAGENT_IMPLEMENTATION_GUIDE.md  TOOLS_ARCHITECTURE.md  agent-context-management-practices.md  agent-integration.md  agent-task-onboarding.md  relay-server-project-query-api.md  relay-server-task-submission-api.md  task-runtime-protocol.md
examples/: config.json
openspec/changes/archive/2026-03-08-support-multi-agent-channel-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-08-support-multi-agent-channel-config/specs/multi-agent-routing/: spec.md
openspec/changes/archive/2026-03-09-add-qqbot-channel/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-add-qqbot-channel/specs/multi-agent-routing/: spec.md
openspec/changes/archive/2026-03-13-support-cross-platform-tools-sandbox/: design.md  proposal.md  tasks.md
openspec/changes/convert-weixin-ts-to-cpp/: design.md  proposal.md  tasks.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-account-manager/: spec.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-api-client/: spec.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-cdn-operations/: spec.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-config-management/: spec.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-media-processor/: spec.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-message-handler/: spec.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-monitor/: spec.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-qr-login/: spec.md
openspec/changes/convert-weixin-ts-to-cpp/specs/weixin-state-storage/: spec.md
openspec/specs/cross-platform-tools-sandbox/: spec.md
openspec/specs/multi-agent-routing/: spec.md
openspec/specs/qqbot-channel/: spec.md
skills/cron/: SKILL.md
skills/notion/: SKILL.md
skills/tophub/: SKILL.md  tophub.json  tophub.py
skills/tts/: SKILL.md
skills/web/: SKILL.md  fetch_web.py  output.html  parse_output.py
src/: CMakeLists.txt  PORTING.md  README.md  config_tests.cpp  routing_tests.cpp  sandbox_tests.cpp  task_decomposer_tests.cpp  task_workflow_tests.cpp  thread_pool_tests.cpp  tts_test.cpp
src/agent/: agent_loop.cpp  agent_loop.hpp  agent_registry.cpp  agent_registry.hpp  context_builder.cpp  context_builder.hpp  memory_store.cpp  memory_store.hpp  skills_loader.cpp  skills_loader.hpp
src/agent/planning/: task_decomposer.cpp  task_decomposer.hpp  task_plan.hpp
src/agent/subagent/: async_attribution.cpp  async_attribution.hpp  builtin_agents.cpp  builtin_agents.hpp  subagent_context.cpp  subagent_context.hpp  subagent_runner.cpp  subagent_runner.hpp  subagent_service.cpp  subagent_service.hpp  subagent_task.cpp  subagent_task.hpp  subagent_tool_filter.cpp  subagent_tool_filter.hpp  subagent_transcript.cpp  subagent_transcript.hpp  subagent_types.hpp
src/agent/tools/: cron.cpp  cron.hpp  filesystem.cpp  filesystem.hpp  message.cpp  message.hpp  plan_work.cpp  plan_work.hpp  shell.cpp  shell.hpp  spawn.cpp  spawn.hpp  todo.cpp  todo.hpp  tool.hpp  tool_registry.cpp  tool_registry.hpp  tool_schema_validator.cpp  tool_schema_validator.hpp  tts.cpp  tts.hpp  web.cpp  web.hpp
src/bus/: events.hpp  message_bus.cpp  message_bus.hpp
src/channels/: channel_base.cpp  channel_base.hpp  channel_manager.cpp  channel_manager.hpp  lark_channel.cpp  lark_channel.hpp  qqbot_channel.cpp  qqbot_channel.hpp  telegram_channel.cpp  telegram_channel.hpp
src/cli/: commands.cpp
src/cmake/: toolchain.cmake
src/config/: config_loader.cpp  config_loader.hpp  config_schema.hpp
src/cron/: cron_service.cpp  cron_service.hpp  cron_types.hpp
src/heartbeat/: heartbeat_service.cpp  heartbeat_service.hpp
src/providers/: litellm_provider.cpp  litellm_provider.hpp  llm_provider.cpp  llm_provider.hpp
src/relay/: relay_manager.cpp  relay_manager.hpp
src/sandbox/: sandbox_executor.cpp  sandbox_executor.hpp
src/session/: session_manager.cpp  session_manager.hpp  session_types.hpp
src/task/: task_runtime.cpp  task_runtime.hpp
src/utils/: cancel_token.hpp  common.hpp  logging.cpp  logging.hpp  thread_pool.hpp
src/weixin/: CMakeLists.txt  compat.cpp  compat.hpp  create_stubs.sh  weixin_channel.cpp  weixin_channel.hpp
src/weixin/api/: api_client.cpp  api_client.hpp  api_types.hpp
src/weixin/auth/: account.hpp  accounts.cpp  accounts.hpp  login_qr.cpp  login_qr.hpp
src/weixin/cdn/: aes_ecb.cpp  aes_ecb.hpp  cdn_upload.cpp  cdn_upload.hpp  cdn_url.cpp  cdn_url.hpp  file_upload.cpp  file_upload.hpp  pic_decrypt.cpp  pic_decrypt.hpp
src/weixin/config/: config_schema.hpp
src/weixin/media/: media_downloader.cpp  media_downloader.hpp  mime_detector.cpp  mime_detector.hpp  silk_transcoder.cpp  silk_transcoder.hpp
src/weixin/media/silk/: silk_decoder.cpp  silk_decoder.hpp  silk_sdk_wrapper.cpp  silk_sdk_wrapper.hpp
src/weixin/messaging/: inbound_processor.cpp  inbound_processor.hpp  media_sender.cpp  media_sender.hpp  message_pipeline.cpp  message_pipeline.hpp  message_sender.cpp  message_sender.hpp  slash_commands.cpp  slash_commands.hpp
src/weixin/monitor/: connection_manager.cpp  connection_manager.hpp
src/weixin/storage/: context_token_store.cpp  context_token_store.hpp  state_directory.cpp  state_directory.hpp  sync_buffer.cpp  sync_buffer.hpp
src/weixin/util/: random.cpp  random.hpp  redact.cpp  redact.hpp
